--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,21 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  #state management
+  flutter_bloc: ^8.1.6
+  equatable: ^2.0.5
+  #firebase
+  firebase_auth: ^5.1.1
+  cloud_firestore: ^5.0.2
+  firebase_storage: ^12.1.0
+
+  responsive_builder: ^0.7.1
+  camera: ^0.11.0+1
+  image_picker: ^1.1.2
+  bubble: ^1.2.1
+  country_pickers: ^3.0.1
+  mask_text_input_formatter: ^2.9.0
+  pin_code_fields: ^8.0.1
 
 
   # The following adds the Cupertino Icons font to your application.
